gcc/testsuite/rust/rustc/ui/type-alias-impl-trait/issue-60371.rs
trait Bug {
    type Item: Bug;

    const FUN: fn() -> Self::Item;
}

impl Bug for &() {
    type Item = impl Bug; // { dg-error ".E0658." "" { target *-*-* } }

    const FUN: fn() -> Self::Item = || ();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

fn main() {}

